2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/chemicals/reaction.h:
	* include/daisy/chemicals/chemistry.h (initialize): Take
	'chemistry' parameter.

2025-01-27  Per Abrahamsen  <pa@plen.ku.dk>

	* src/object_model/model.C (Model::obsolete)
	(Model::declare_obsolete): New functions.
	* src/daisy/lower_boundary/groundwater_static.C (load_frame): Use them.
	* src/daisy/output/log_alist.C (LogSubmodel::close_unnamed): Make
	sentry a symbol.
	* src/object_model/parser_file.C (load_list): Support them.

2025-01-17  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/adsorption_langmuir.C (C_to_M, M_to_C): Fix.

2025-01-16  Per Abrahamsen  <pa@plen.ku.dk>

	* lib/log.dai ("Drain Sink Water", "Biopore Drain Sink Water"):
	Fix units.
	("Drain Sink NO3", "Drain Sink NH4"): Remove dimension.
	("Fertilizer"): Add spec.

2024-11-21  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/chemicals/nitrification_solute.C (tick): Multiply with
	Theta.
	* include/daisy/chemicals/nitrification.h: Update signature.
	* src/daisy/chemicals/nitrification_soil.C:
	* src/daisy/chemicals/reaction_nit.C (tick_soil): Pass Theta.
	* include/daisy/soil/soil.h:
	* src/daisy/soil/horizon.C:

2024-10-30  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/soil/soil.h:
	* src/daisy/soil/soil.C (Soil::texture_fractile): New function.


	* include/daisy/soil/texture.h:
	* src/daisy/chemicals/nitrification_soil.C:
	* src/daisy/chemicals/reaction_nit.C (tick_soil): Pass Theta.
	* include/daisy/soil/soil.h:
	* src/daisy/soil/horizon.C:

2024-10-30  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/soil/soil.h:
	* src/daisy/soil/soil.C (Soil::texture_fractile): New function.


	* include/daisy/soil/texture.h:
	* src/daisy/soil/texture.C (Texture::fractile): New function.

	* src/daisy/chemicals/adsorption.h:
	* src/daisy/chemicals/adsorption.C (AdsorptionLinear): Removed.
	* src/daisy/chemicals/adsorption_linear.C (AdsorptionLinearOld):
	Renamed to AdsorptionLinear.
