@@ -1,3 +1,8 @@
+2025-03-03  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/chemicals/reaction_Python.C: New model.
+	* src/daisy/chemicals/CMakeLists.txt: Add it.
+
 2025-02-28  Per Abrahamsen  <pa@plen.ku.dk>
 
 	* include/daisy/chemicals/reaction.h:
